Update add/remove cart images

--- a/app/src/main/res/layout/list_comanda.xml
+++ b/app/src/main/res/layout/list_comanda.xml
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/removeCart"
             android:contentDescription="removeFromCart"
-            android:background="@drawable/cart"
+            android:background="@drawable/rcart"
             android:clickable="true" />
 
         <TextView
