--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -8,11 +8,11 @@
 
     <TableRow>
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:src="@drawable/ic_launcher"
             android:contentDescription="@string/app_name"
-            android:layout_gravity="left|center"/>
+            android:layout_gravity="center"/>
 
         <TextView
             android:id="@+id/info_text"
